src/cmavsdk/plugins/rtk/rtk.h

// WARNING: THIS FILE IS AUTOGENERATED! As such, it should not be edited.
// Edits need to be made to the proto files
// (see https://github.com/mavlink/MAVSDK-Proto/blob/main/protos/rtk/rtk.proto)

#ifndef CMAVSDK_RTK_H
#define CMAVSDK_RTK_H

#include <stddef.h>
#include <stdint.h>
#include <stdbool.h>
#include "cmavsdk/mavsdk_export.h"

#ifdef __cplusplus
extern "C" {
#endif

/**
 * @brief Service to send RTK corrections to the vehicle.
 */

// ===== Forward Declarations =====
typedef void* mavsdk_system_t;

// ===== Opaque Handles =====
typedef void* mavsdk_rtk_t;

// ===== Enums =====

// ===== Structs =====
/**
 * @brief RTCM data type
 *
 * @note This struct may contain dynamically allocated memory. Always call
 *       mavsdk_rtk_rtcm_data_destroy() when done to avoid memory leaks.
 */
typedef struct {
    /**  The data encoded as a base64 string */
    char* data_base64;
} mavsdk_rtk_rtcm_data_t;

/**
 * @brief Destroy a rtcm_data struct.
 *
 * Frees all memory allocated by MAVSDK for this struct, including any
 * dynamically allocated arrays or strings. Must be called to avoid memory leaks.
 * Always call this function when done with the struct, even if it currently
 * contains no dynamic allocations.
 *
 * @param target Pointer to the struct to destroy. Can be NULL (no-op).
 */
void mavsdk_rtk_rtcm_data_destroy(
    mavsdk_rtk_rtcm_data_t* target);

/**
 * @brief Destroy an array of rtcm_data structs.
 *
 * Frees all memory allocated for the array and its elements, including any
 * nested dynamic allocations. Must be called to avoid memory leaks.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 * @param size Number of elements in the array.
 */
void mavsdk_rtk_rtcm_data_array_destroy(
    mavsdk_rtk_rtcm_data_t** array,
    size_t size);

/**
 * @brief Possible results returned for rtk requests.
 */
typedef enum {
    /**  Unknown result. */
    MAVSDK_RTK_RESULT_UNKNOWN = 0,
    /**  Request succeeded. */
    MAVSDK_RTK_RESULT_SUCCESS = 1,
    /**  Passed data is too long. */
    MAVSDK_RTK_RESULT_TOO_LONG = 2,
    /**  No system connected. */
    MAVSDK_RTK_RESULT_NO_SYSTEM = 3,
    /**  Connection error. */
    MAVSDK_RTK_RESULT_CONNECTION_ERROR = 4,
} mavsdk_rtk_result_t;



// ===== Primitive Array Destroy Functions =====
/**
 * @brief Destroy an array of float.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_rtk_float_array_destroy(float** array);
/**
 * @brief Destroy an array of double.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_rtk_double_array_destroy(double** array);
/**
 * @brief Destroy an array of int32_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_rtk_int32t_array_destroy(int32_t** array);
/**
 * @brief Destroy an array of uint32_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_rtk_uint32t_array_destroy(uint32_t** array);
/**
 * @brief Destroy an array of int64_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_rtk_int64t_array_destroy(int64_t** array);
/**
 * @brief Destroy an array of uint64_t.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_rtk_uint64t_array_destroy(uint64_t** array);
/**
 * @brief Destroy an array of bool.
 *
 * Frees the memory allocated for the array.
 *
 * @param array Pointer to the array pointer. Will be set to NULL after freeing.
 */
void mavsdk_rtk_bool_array_destroy(bool** array);

/**
 * @brief Destroy a string (char*).
 *
 * Frees the memory allocated for the string.
 *
 * @param str Pointer to the string pointer. Will be set to NULL after freeing.
 */
void mavsdk_rtk_string_destroy(char** str);

/**
 * @brief Destroy a byte buffer (uint8_t*).
 *
 * Frees the memory allocated for the byte buffer.
 *
 * @param buffer Pointer to the buffer pointer. Will be set to NULL after freeing.
 */
void mavsdk_rtk_byte_buffer_destroy(uint8_t** buffer);

// ===== Callback Typedefs =====

// ===== Rtk Creation/Destruction =====
CMAVSDK_EXPORT mavsdk_rtk_t mavsdk_rtk_create(mavsdk_system_t system);
CMAVSDK_EXPORT void mavsdk_rtk_destroy(mavsdk_rtk_t rtk);

// ===== Methods =====

/**
 * @brief Get the current send rtcm data (blocking).
 *
 * This function blocks until a value is available.
 *
 * @param telemetry The telemetry instance.
 * @param send_rtcm_data_out Pointer to store the result.
 */
CMAVSDK_EXPORT
mavsdk_rtk_result_t
mavsdk_rtk_send_rtcm_data(
    mavsdk_rtk_t rtk,
    mavsdk_rtk_rtcm_data_t rtcm_data);


#ifdef __cplusplus
}
#endif

#endif // CMAVSDK_RTK_H