py/mavsdk/pymavsdk/plugins/rtk/rtk.py

# ruff: noqa: F401

# WARNING: THIS FILE IS AUTOGENERATED! As such, it should not be edited.
# Edits need to be made to the proto files
# (see https://github.com/mavlink/MAVSDK-Proto/blob/main/protos/rtk/rtk.proto)

"""
Service to send RTK corrections to the vehicle.
"""

import atexit
import ctypes

from typing import Callable, Any
from enum import IntEnum

from ...cmavsdk_loader import _cmavsdk_lib


# ===== Enums =====


# ===== Result Enums =====
class RtkResult(IntEnum):
    """Possible results returned for rtk requests."""

    UNKNOWN = 0
    SUCCESS = 1
    TOO_LONG = 2
    NO_SYSTEM = 3
    CONNECTION_ERROR = 4


# ===== Internal C Structures =====
class RtcmDataCStruct(ctypes.Structure):
    """
    Internal C structure for RtcmData.
    Used only for C library communication.
    """

    _fields_ = [
        ("data_base64", ctypes.c_char_p),
    ]


# ===== Structures =====
class RtcmData:
    """
    RTCM data type
    """

    def __init__(self, data_base64=None):
        self.data_base64 = data_base64

    @classmethod
    def from_c_struct(cls, c_struct):
        """Convert from C structure to Python object"""
        instance = cls()
        instance.data_base64 = c_struct.data_base64.decode("utf-8")
        return instance

    def to_c_struct(self):
        """Convert to C structure for C library calls"""
        c_struct = RtcmDataCStruct()
        c_struct.data_base64 = self.data_base64.encode("utf-8")
        return c_struct

    def __str__(self):
        fields = []
        fields.append(f"data_base64={self.data_base64}")
        return f"RtcmData({', '.join(fields)})"


# ===== Plugin =====
class Rtk:
    """Service to send RTK corrections to the vehicle."""

    def __init__(self, system):
        self._lib = _cmavsdk_lib
        self._handle = None
        self._callbacks = []  # Keep references to prevent GC

        if system is None:
            raise ValueError("system cannot be None")

        system_handle = system._handle

        if not system_handle:
            raise ValueError("system handle is null")

        self._handle = self._lib.mavsdk_rtk_create(system_handle)

        if not self._handle:
            raise RuntimeError(
                "Failed to create Rtk plugin - C function returned null handle"
            )

        atexit.register(self.destroy)

    def send_rtcm_data(self, rtcm_data):
        """Get send_rtcm_data (blocking)"""

        result_code = self._lib.mavsdk_rtk_send_rtcm_data(
            self._handle,
            rtcm_data.to_c_struct(),
        )
        result = RtkResult(result_code)
        if result != RtkResult.SUCCESS:
            raise Exception(f"send_rtcm_data failed: {result}")

        return result

    def destroy(self):
        """Destroy the plugin instance"""
        if self._handle:
            self._lib.mavsdk_rtk_destroy(self._handle)
            self._handle = None

    def __del__(self):
        self.destroy()


# ===== Callback Types =====

# ===== Setup Functions =====
_cmavsdk_lib.mavsdk_rtk_create.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_rtk_create.restype = ctypes.c_void_p

_cmavsdk_lib.mavsdk_rtk_destroy.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_rtk_destroy.restype = None

_cmavsdk_lib.mavsdk_rtk_rtcm_data_destroy.argtypes = [ctypes.POINTER(RtcmDataCStruct)]
_cmavsdk_lib.mavsdk_rtk_rtcm_data_destroy.restype = None


_cmavsdk_lib.mavsdk_rtk_send_rtcm_data.argtypes = [
    ctypes.c_void_p,
    RtcmDataCStruct,
]

_cmavsdk_lib.mavsdk_rtk_send_rtcm_data.restype = ctypes.c_int
